Project/Phase2/test/test_12011543_1.out
x
find local:------------------0------------------
-------------------------------------------------
insert:------------------0------------------
index: 0, key(identifier): x
-------------------------------------------------
y
find local:------------------0------------------
index: 0, key(identifier): x
-------------------------------------------------
insert:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
-------------------------------------------------
compare
find global:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
-------------------------------------------------
insert:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
-------------------------------------------------
add link node:------------------1------------------
-------------------------------------------------
free link node:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
-------------------------------------------------
x
find local:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
-------------------------------------------------
Error type 3 at Line 10: redefine variable: x
y
find local:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
-------------------------------------------------
Error type 3 at Line 10: redefine variable: y
compare
find global:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
-------------------------------------------------
Error type 4 at Line 10: redefine function compare
a
find local:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
-------------------------------------------------
insert:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
-------------------------------------------------
b
find local:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
-------------------------------------------------
insert:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
index: 0, key(identifier): b
-------------------------------------------------
compare2
find global:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
index: 0, key(identifier): b
-------------------------------------------------
insert:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): compare2
-------------------------------------------------
add link node:------------------1------------------
-------------------------------------------------
free link node:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): compare2
-------------------------------------------------
test_12011543_1
find global:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): compare2
-------------------------------------------------
insert:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): compare2
index: 0, key(identifier): test_12011543_1
-------------------------------------------------
add link node:------------------1------------------
-------------------------------------------------
a
find local:------------------1------------------
-------------------------------------------------
insert:------------------1------------------
index: 0, key(identifier): a
-------------------------------------------------
b
find local:------------------1------------------
index: 0, key(identifier): a
-------------------------------------------------
insert:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
-------------------------------------------------
c
find local:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
-------------------------------------------------
insert:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
-------------------------------------------------
f
find local:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
-------------------------------------------------
insert:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
-------------------------------------------------
b
find global:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
-------------------------------------------------
s
find global:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
-------------------------------------------------
Error type 1 at Line 30: undefined variable: s
Error type 7 at Line 30: unmatching operands
Error type 5 at Line 30: unmatching type on both sides of assignment
d
find local:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
-------------------------------------------------
insert:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
-------------------------------------------------
a
find global:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
-------------------------------------------------
b
find global:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
-------------------------------------------------
c
find global:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
-------------------------------------------------
r
find local:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
-------------------------------------------------
insert:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
index: 0, key(identifier): r
-------------------------------------------------
add
find global:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
index: 0, key(identifier): r
-------------------------------------------------
Error type 2 at Line 32: undefined function: add
Error type 5 at Line 32: unmatching type on both sides of assignment
compare
find global:------------------1------------------
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): c
index: 0, key(identifier): f
index: 0, key(identifier): d
index: 0, key(identifier): r
-------------------------------------------------
free link node:------------------0------------------
index: 0, key(identifier): x
index: 0, key(identifier): y
index: 0, key(identifier): compare
index: 0, key(identifier): a
index: 0, key(identifier): b
index: 0, key(identifier): compare2
index: 0, key(identifier): test_12011543_1
-------------------------------------------------