Project/Phase2/test/test_12011543_1.spl
int compare(int x, int y)
{
  return 1;
  return 2;
  return 3;
  return 4;
  return 5;
  return 6;
}
float compare(int x, int y)
{
  return 1;
  return 2;
  return 3;
  return 4;
  return 5;
  return 6;
}
float compare2(int a, int b){
  return 1.0;
  return 2.0;
  return 3.0;
  return 4.0;
  return 5.0;
  return 6.11;
}
int test_12011543_1()
{
  int a, b, c, k;
  int f = b + s;
  int d =!!!(a = !!(b = !(c = 0))) ;
  int r = add(k);
  return compare(7, 8);
}